--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,18 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.20</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${com.h2database.h2.version}</version>
+        </dependency>
     </dependencies>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <com.h2database.h2.version>1.4.187</com.h2database.h2.version>
     </properties>
 
 </project>
